Fixed column spacing

--- a/grid.css
+++ b/grid.css
@@ -5,17 +5,15 @@
 
 .grid-container {
   display: grid;
-  column-gap: 50px;
-  row-gap: 50px;
-  grid-template-columns: 300px 300px 300px;
-  padding: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 20px;
 }
 
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
   border-radius: 5px;
-  width: 300px;
   padding: 20px;
   font-size: 30px;
   text-align: center;
@@ -23,6 +21,6 @@
 
 .grid-item p {
   font-size: 20px;
-  font-family: 'Futura_Light';
+  font-family: "Futura_Light";
   text-align: center;
 }
